test/invalid/baseline/bigint-keyword.txt
Syntax error at line 2 in bigint-keyword.webidl, since `dictionary Dictionary`:
  long long bigint;
            ^ Dictionary member lacks a name
